tabs fix bug 395 example tab should align center with the container

--- a/src/assets/examples/tab-group-stretched/tab-group-stretched.component.css
+++ b/src/assets/examples/tab-group-stretched/tab-group-stretched.component.css
@@ -1,6 +1,5 @@
 .example-stretched-tabs {
-  max-width: 800px;
-  margin-left: 40px;
-  margin-right: 40px;
+  max-width: 720px;
+  margin:0 auto;
   text-align: left;
 }
